<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingVertical="10dp"


    >
    <TableRow
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_inventory_48"
            android:layout_weight="1"
            android:contentDescription="@string/item_image"
            />

        <LinearLayout
            android:paddingStart="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"

            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/itemNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/itemBarcodeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_barcode"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/itemExpiryDateView"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="16sp"
            android:text="@string/exp_2025_12_31"
            android:textAlignment="center"

            />
        <TextView
            android:id="@+id/itemQuantityView"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:text="@string/number_0"
            android:layout_weight="2"
            android:textSize="30sp"
            android:textAlignment="center"
            />
    </TableRow>

</TableLayout>