<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingVertical="10dp"


    >

    <TableRow android:layout_height="match_parent">

        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/item_image"
            android:src="@drawable/baseline_inventory_48" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:gravity="center_vertical"
            android:layout_weight="4"
            android:orientation="vertical"

            android:paddingStart="10dp">

            <TextView
                android:id="@+id/itemNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/itemQuantityAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Available Quantity:"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/itemExpiryDateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="2dp"
                android:text="@string/exp_2025_12_31"

                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/itemPriceView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="price: 0"
                android:textSize="16sp" />
        </LinearLayout>



        <EditText
            android:id="@+id/itemQuantity"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="30dp"
            android:text="@string/number_0"
            android:textAlignment="center"
            android:textSize="30sp" />
    </TableRow>



</TableLayout>