<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditInventoryActivity"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:gravity="center_horizontal"

    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        >
        <TableRow
            android:layout_marginBottom="30dp"
            >
            <EditText
                android:id="@+id/itemNameEd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="20sp"
                />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            >
            <EditText
                android:id="@+id/itemBarcodeEd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="4"
                android:hint="@string/Barcode"
                android:textSize="20sp"
                />
            <ImageButton
                android:id="@+id/qrCodeScanButton"
                android:layout_width="0dp"
                android:layout_height="30dp"


                android:padding="10dp"
                android:layout_weight="1"

                android:src="@drawable/baseline_barcode_48"

                />
        </TableRow>
        <TableRow
            android:layout_marginBottom="30dp"
            >
            <EditText
                android:id="@+id/itemDescriptionEd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textSize="20sp"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            >
            <EditText
                android:id="@+id/itemQuantityEd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="Quantity"
                android:inputType="number"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/receiveGoods"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="+"
                android:layout_weight="2"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/issueGoods"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="-"
                android:layout_weight="2"
                android:textSize="20sp"
                />

        </TableRow>
        <TableRow
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/itemPriceEd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                android:layout_weight="1"
                />

        </TableRow>
        <TableRow
            android:layout_marginBottom="30dp"
            >
            <EditText
                android:id="@+id/expiryDateEd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/expiry_date"
                android:inputType="none"
                android:textSize="20sp"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/addItemImageText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Item Image"
                android:layout_weight="3"
                />
            <ImageButton
                android:id="@+id/cameraImageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                android:layout_weight="2"

                />
            <ImageButton
                android:id="@+id/addItemImageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_gallery"
                android:layout_weight="2"

                />
        </TableRow>



    </TableLayout>

    <Button
        android:id="@+id/itemSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="saveButtonHandler"
        />





</LinearLayout>