<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:fitsSystemWindows="true"
    >

    <GridLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:columnCount="2"
        android:useDefaultMargins="true"



        >
        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="160dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_gravity="center"



            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="20dp"
                android:layout_gravity="center"

                >
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/baseline_inventory_48"
                    android:contentDescription="@string/inventory"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inventory"
                    android:textSize="16sp"

                    />
                <TextView
                    android:id="@+id/inventorySize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/number_0"

                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="160dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_gravity="center"



            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingVertical="20dp"
                >
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/baseline_payment_48"
                    android:contentDescription="@string/inventory"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses"
                    android:textSize="12sp"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="160dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_gravity="center"


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="20dp"


                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/baseline_book_48"
                    android:contentDescription="@string/inventory"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/documents"
                    android:textSize="12sp"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="160dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_gravity="center"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="20dp"


                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/baseline_barcode_48"
                    android:contentDescription="@string/inventory"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barcode_scan"
                    android:textSize="12sp"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="160dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_gravity="center"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="20dp"


                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/baseline_analytics_48"
                    android:contentDescription="@string/inventory"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/analytics"
                    android:textSize="12sp"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </GridLayout>
</LinearLayout>